# gitui

./: CHANGELOG.md  Cargo.toml  THEMES.md  deny.toml
.github/workflows/: ci.yml
asyncgit/: Cargo.toml
asyncgit/src/: error.rs  file_history.rs  lib.rs  revlog.rs
asyncgit/src/asyncjob/: mod.rs
asyncgit/src/sync/: commit.rs  commit_files.rs  commit_filter.rs  commits_info.rs  config.rs  hooks.rs  logwalker.rs  mod.rs  repository.rs
asyncgit/src/sync/branch/: mod.rs
asyncgit/src/sync/remotes/: push.rs
git2-hooks/: Cargo.toml
git2-hooks/src/: hookspath.rs  lib.rs
git2-testing/: Cargo.toml
git2-testing/src/: lib.rs
src/: args.rs  clipboard.rs
src/components/: commitlist.rs  mod.rs
src/components/utils/: logitems.rs
src/keys/: key_config.rs
src/popups/: blame_file.rs  commit.rs  file_revlog.rs  msg.rs
src/ui/: syntax_text.rs
