[package]
name = "git2-hooks"
version = "0.4.0"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "adds git hooks support based on git2-rs"
homepage = "https://github.com/gitui-org/gitui"
repository = "https://github.com/gitui-org/gitui"
documentation = "https://docs.rs/git2-hooks/"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["git"]

[dependencies]
git2 = { git = "https://github.com/rust-lang/git2-rs.git", rev="d1ae3b6c2d1200e7d82468af447fa66259225ecf" }
log = "0.4"
shellexpand = "3.1"
thiserror = "2.0"

[dev-dependencies]
git2-testing = { path = "../git2-testing" }
pretty_assertions = "1.4"
tempfile = "3"
