[package]
name = "git2-hooks"
version = "0.4.0"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "adds git hooks support based on git2-rs"
homepage = "https://github.com/gitui-org/gitui"
repository = "https://github.com/gitui-org/gitui"
documentation = "https://docs.rs/git2-hooks/"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["git"]

[features]
default = []

# test-utils publishes fns that are useful for testing. These may panic on common errors.
test-utils = ["git2-testing"]

[dependencies]
git2 = ">=0.17"
git2-testing = { path = "../git2-testing", optional = true }
log = "0.4"
shellexpand = "3.1"
thiserror = "2.0"

[dev-dependencies]
git2-testing = { path = "../git2-testing" }
pretty_assertions = "1.4"
tempfile = "3"
